--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<version>2.13.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>3.13.0</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
